shopmicroprofile-jwt-docker/kubernetes/productnew-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: productnew
  labels:
    app: productnew
spec:
  type: NodePort
  selector:
    app: productnew
  ports:
  - protocol: TCP
    port: 8080
    name: http
