shopmicroprofile-jwt-docker/kubernetes/shopfrontnew-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: shopfrontnew
  labels:
    app: shopfrontnew
spec:
  type: NodePort
  selector:
    app: shopfrontnew
  ports:
  - protocol: TCP
    port: 8080
    name: http
